<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/first_name_input_layout"
        style="@style/Theme.PenguinPay.InputField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_16"
        android:layout_marginTop="@dimen/size_48"
        android:layout_marginEnd="@dimen/size_8"
        app:layout_constraintEnd_toStartOf="@+id/last_name_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/first_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/last_name_input_layout"
        style="@style/Theme.PenguinPay.InputField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_8"
        android:layout_marginEnd="@dimen/size_16"
        app:layout_constraintBottom_toBottomOf="@+id/first_name_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/first_name_input_layout"
        app:layout_constraintTop_toTopOf="@+id/first_name_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/last_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/country_dropdown_layout"
        style="@style/Theme.PenguinPay.TextInputLayout.DropDown"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/size_8"
        android:layout_marginStart="@dimen/size_16"
        android:layout_marginTop="@dimen/size_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/phone_number_input_layout"
        app:layout_constraintTop_toBottomOf="@id/first_name_input_layout"
        android:hint="@string/country_hint">

        <AutoCompleteTextView
            android:id="@+id/country_type_dropdown"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="textNoSuggestions" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_number_input_layout"
        style="@style/Theme.PenguinPay.InputField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_16"
        android:layout_marginStart="@dimen/size_8"
        android:layout_marginEnd="@dimen/size_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/country_dropdown_layout"
        app:layout_constraintTop_toBottomOf="@+id/first_name_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_number_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:maxLines="1"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amount_input_layout"
        style="@style/Theme.PenguinPay.InputField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_16"
        android:layout_marginHorizontal="@dimen/size_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/country_dropdown_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amount_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLines="1"
            android:digits="01"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_receives"
        android:textSize="@dimen/text_18"
        android:paddingVertical="@dimen/size_16"
        android:layout_margin="@dimen/size_16"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amount_input_layout" />


    <TextView
        android:id="@+id/amount_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/user_receives"
        android:textSize="@dimen/text_18"
        android:paddingVertical="@dimen/size_16"
        android:layout_margin="@dimen/size_16"
        android:textColor="@color/purple_500"
        app:layout_constraintStart_toEndOf="@id/message"
        app:layout_constraintTop_toTopOf="@id/message"
        app:layout_constraintBottom_toBottomOf="@id/message"/>



</androidx.constraintlayout.widget.ConstraintLayout>